--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  border: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* 
+images
+======================
+*/
+
+.image {
+  width: 50px;
+}
+
+/* 
+home page
+==============================================
+*/
+#home {
+  background-color: #ddd;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
+}
+
+/* #game_board {
+  display: grid;
+  grid-template-columns: repeat(20, 45px);
+  grid-template-rows: repeat(20, 45px);
+  background-color: #ddd;
+  gap: 5px;
+} */
+
+.cell {
+  background-color: #333;
+  height: 60px;
+  width: 60px;
+  margin: 2px;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
