--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,22 @@
   align-items: center;
 }
 
+#modal {
+  animation: modelAnim 0.5s forwards;
+}
+
+/* 
+modal mount animation
+*/
+@keyframes modelAnim {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 /* 
 images
 ======================
@@ -33,7 +49,7 @@ home page
   background-color: #f5f5f5;
   display: flex;
   justify-content: center;
-  /* height: 100vh; */
+  min-height: 100vh;
   align-items: center;
 }
 
