--- a/src/index.css
+++ b/src/index.css
@@ -47,10 +47,7 @@ home page
 */
 #home {
   background-color: #f5f5f5;
-  display: flex;
-  justify-content: center;
   min-height: 100vh;
-  align-items: center;
 }
 
 /* 
@@ -60,6 +57,8 @@ game grid
 
 #game_board {
   display: flex;
+  min-height: 100vh;
+  align-items: center;
 }
 
 .cell {
